gitops/apps/forge/mesh/ambient/namespace-patch.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: zheta-forge
  labels:
    istio.io/dataplane-mode: ambient
    istio.io/use-waypoint: forge-waypoint
